- moved the todo feature into its own package - updated swagger yaml - this is still broken
